docs: Add swagger docs to exec handlers
